add chartDiv in html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 							<label for="radio_num_papers_collection_2">Number of collection_2 papers in cluster</label>
 						</div>
 						
-						<svg width="960" height="600"></svg>
+						<div id="chartDiv"></div>
+						
 				</div>  
 
 						<div id="tooltip-template">
